bevy_elf_macros/tests/ui/fail/from_default_and_with_resolver.stderr
error: `from_default` and `default` cannot be combined with other parameters
 --> tests/ui/fail/from_default_and_with_resolver.rs:6:5
  |
6 |     #[elf(from_default, with_resolver(Bar))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
